@@ -6,6 +6,8 @@ This file lists the changes in each six version.
 Development version
 -------------------
 
+- Issue #102: Add `raise_from` to abstract out Python 3's raise from syntax.
+
 - Issue #97: Optimize `six.iterbytes` on Python 2.
 
 - Issue #98: Fix `six.moves` race condition in multi-threaded code.
